fixing overflow information

--- a/src/components/Description/Description.module.css
+++ b/src/components/Description/Description.module.css
@@ -1,66 +1,98 @@
 .container {
-    height: 11rem;
-    width: 13rem;
-    position: absolute;
-    left: 1rem;
-    top: 9rem;
-    overflow-x: hidden;
-    padding: 0 2rem 0 1rem;
-    background: rgba(255, 255, 255, 0.26);
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(1px);
-    -webkit-backdrop-filter: blur(1px);
-    border-radius: 15px;
-    -webkit-border-radius: 15px;
-    -moz-border-radius: 15px;
-    -ms-border-radius: 15px;
-    -o-border-radius: 15px;
+  height: 11rem;
+  width: 13rem;
+  position: absolute;
+  left: 1rem;
+  top: 9rem;
+  overflow-x: hidden;
+  overflow-y: auto;
+  text-overflow: ellipsis;
+  padding: 0 2rem 0 1rem;
+  background: rgba(255, 255, 255, 0.26);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  -webkit-backdrop-filter: blur(1px);
+  backdrop-filter: blur(1px);
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  -ms-border-radius: 15px;
+  -o-border-radius: 15px;
+  border-radius: 15px;
+  -webkit-overflow-scrolling: touch;
 }
+
 .container:hover {
-    overflow-x: auto;
+  overflow-y: auto;
 }
 
 .name {
-    font-size: var(--subtitle);
-    margin-top: 0.5rem;
-    font-weight: bold;
+  font-size: var(--subtitle);
+  margin: 0.5rem 0;
+  font-weight: bold;
 }
 .info {
-    font-size: var(--smallest);
-    text-align: justify;
+  font-size: var(--smallest);
+  text-align: justify;
+}
+
+/* //*Se crean estilos para personalizar un scrollbar para el overflow del texto, el unico problema es que en dispositivos moviles, esta barra no es visible, tambien se adaptó el tamaño del aside para adaptarse al contenido del personaje, teniendo en cada media un limite de crecimiento */
+/* Estilos para el scrollbar */
+.container::-webkit-scrollbar {
+  width: 8px; /* Ancho del scrollbar */
+}
+
+.container::-webkit-scrollbar-track {
+  background: #f1f1f1; /* Color de fondo del scrollbar */
+}
+
+.container::-webkit-scrollbar-thumb {
+  /*Colordelscrollthumb*/
+  background: rgb(214, 168, 43);
+  /*Radiodelscrollthumb*/
+  border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  -webkit-border-radius: 4px;
+}
+
+.container::-webkit-scrollbar-thumb:hover {
+  background: #555; /* Color del scroll thumb al hacer hover */
 }
 
 /*------------Responsive------------------*/
 @media (min-width: 576px) and (max-width: 767px) {
-    .container {
-        min-height: fit-content;
-        height: 18rem;
-        width: 18rem;
-        top: 10rem;
-    }
+  .container {
+    height: fit-content;
+    width: fit-content;
+    max-width: 18rem;
+    top: 10rem;
+  }
 }
 @media (min-width: 768px) and (max-width: 991px) {
-    .container {
-        min-height: fit-content;
-        height: 30rem;
-        width: 20rem;
-        top: 12rem;
-    }
+  .container {
+    min-height: fit-content;
+    height: fit-content;
+    width: fit-content;
+    max-width: 20rem;
+    top: 12rem;
+  }
 }
 @media (min-width: 992px) and (max-width: 1199px) {
-    .container {
-        min-height: fit-content;
-        height: 30rem;
-        width: 20rem;
-        top: 12rem;
-    }
+  .container {
+    min-height: fit-content;
+    height: fit-content;
+    width: fit-content;
+    max-width: 20rem;
+    top: 12rem;
+  }
 }
 @media (min-width: 1200px) {
-    .container {
-        min-height: fit-content;
-        height: 20rem;
-        width: 30rem;
-        top: 14rem;
-        left: 8rem;
-    }
+  .container {
+    min-height: fit-content;
+    height: fit-content;
+    width: fit-content;
+    max-width: 30rem;
+    top: 14rem;
+    left: 8rem;
+  }
 }
